benchmark-results/8/merge/cseq/concurrentwitness2test.2024-11-27_10-15-16.logfiles/SV-COMP23_unreach-call.cseq-rfi000_power.oepc_pso.oepc_rmo.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/rfi000_power.oepc_pso.oepc_rmo.oepc.yml/rfi000_power.oepc_pso.oepc_rmo.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/rfi000_power.oepc_pso.oepc_rmo.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_4xjsr9m3/tmp/tmpdkde5iqx.c
Compilation started
/tmp/BenchExec_run_4xjsr9m3/tmp/tmpdkde5iqx.c: In function ‘P1’:
/tmp/BenchExec_run_4xjsr9m3/tmp/tmpdkde5iqx.c:595:19: error: ‘FALSE’ undeclared (first use in this function)
  595 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_4xjsr9m3/tmp/tmpdkde5iqx.c:595:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_4xjsr9m3/tmp/tmpdkde5iqx.c: In function ‘main’:
/tmp/BenchExec_run_4xjsr9m3/tmp/tmpdkde5iqx.c:677:19: error: ‘FALSE’ undeclared (first use in this function)
  677 |   weak$$choice0 = FALSE;;
      |                   ^~~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
